# rexpect

./: .gitignore  .gitlint  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containers  README.md  _typos.toml  bors.toml  deny.toml
.github/: settings.yml
.github/workflows/: ci.yml  commit-lint.yml  rust-next.yml
examples/: bash.rs  bash_read.rs  cat.rs  exit_code.rs  ftp.rs  python.rs  repl.rs  ssh.rs  tcp.rs
src/: encoding.rs  error.rs  fork_pty.rs  lib.rs  openbsd.rs  process.rs  pty.rs  reader.rs  session.rs
test/: test.rs  test_pty.rs
