[package]
description = "Interact with unix processes/bash the same way as pexpect or Don libes expect does"
name        = "rexpect"
version     = "0.4.0"
authors     = ["Philipp Keller <philipp.keller@gmail.com>"]
edition     = "2018"
repository  = "https://github.com/philippkeller/rexpect"
homepage    = "https://github.com/philippkeller/rexpect"
license     = "MIT"
categories  = ["os::unix-apis"]
keywords    = ["pty", "automation", "testing", "expect", "pexpect"]
readme      = "README.md"



[dependencies]
regex = "1"
error-chain = "0.12"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = "0.14"

[target.'cfg(windows)'.dependencies]
winptyproc = { version = "0.1", path = "D:/scratch/winptyproc" }

[badges]
travis-ci = { repository = "philippkeller/rexpect" }
