[package]
description = "Interact with unix processes/bash the same way as pexpect or Don libes expect does"
name        = "rexpect"
version     = "0.4.0"
authors     = ["Philipp Keller <philipp.keller@gmail.com>"]
edition     = "2018"
repository  = "https://github.com/philippkeller/rexpect"
homepage    = "https://github.com/philippkeller/rexpect"
license     = "MIT"
categories  = ["os::unix-apis"]
keywords    = ["pty", "automation", "testing", "expect", "pexpect"]
readme      = "README.md"



[dependencies]
comma = "1.0"
nix = "0.25"
regex = "1"
tempfile = "3"
thiserror = "1.0.34"

[badges]
maintenance = { status = "passively-maintained" }
