[package]
description = "Interact with unix processes/bash the same way as pexpect or Don libes expect does"
name        = "rexpect"
version     = "0.5.0"
authors     = ["Philipp Keller <philipp.keller@gmail.com>"]
edition     = "2021"
repository  = "https://github.com/rust-cli/rexpect"
homepage    = "https://github.com/rust-cli/rexpect"
license     = "MIT"
categories  = ["os::unix-apis"]
keywords    = ["pty", "automation", "testing", "expect", "pexpect"]
readme      = "README.md"
rust-version = "1.60"

[dependencies]
comma = "1.0"
nix = { version = "0.27", features = ["fs", "process", "signal", "term"] }
regex = "1"
tempfile = "3"
thiserror = "1.0.34"

which = { version = "5.0", optional = true }

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = []
which = ["dep:which"]
